--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -1,74 +1,74 @@
-input[type='submit'],
+input[type="submit"],
 button,
 [aria-label] {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 #editForm {
-    display: none;
+  display: none;
 }
 
 table {
-    font-family: Arial, sans-serif;
-    border: 1px solid;
-    border-collapse: collapse;
+  font-family: Arial, sans-serif;
+  border: 1px solid;
+  border-collapse: collapse;
 }
 
 th {
-    background-color: #0f0e0e;
-    padding: 5px;
-    color: aliceblue;
-    font-family: fangsong;
-    width: 200px;
-    font-size: large;
+  background-color: #0f0e0e;
+  padding: 5px;
+  color: aliceblue;
+  font-family: fangsong;
+  font-size: large;
+  font-weight: 300;
+  width: 200px;
 }
 
 td {
-    border: 1px solid;
-    padding: 5px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 400;
-    font-size: large;
-    font-weight: 200;
-    text-align: center;
+  border: 1px solid;
+  padding: 5px;
+  font-family: fangsong;
+  font-size: large;
+  font-weight: 200;
+  text-align: center;
 }
 
-h4 {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 400;
-    font-size: large;
-}
-
-
-@font-face {
-    font-family: TamiFont;
-    src: url(../Image&Fonts/Dellyani.ttf);
+.narrowTh {
+  width: 100px;
 }
 
 @font-face {
-    font-family: "TamiFont";
-    src: url("../Image&Fonts/Dellyani.ttf") format("ttf"),
+  font-family: TamiFont;
+  src: url(../Fonts/Dellyani.ttf);
 }
 
 h1 {
-    font-family: 'TamiFont', Arial, sans-serif;
-    font-weight: normal;
-    font-style: normal;
-    font-size: 80px;
+  font-family: "TamiFont", Arial, sans-serif;
+  font-weight: normal;
+  font-style: normal;
+  font-size: 80px;
 }
 
 body {
-    display: flex;
-    flex-wrap: nowrap;
-    align-content: space-around;
-    justify-content: space-between;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-wrap: nowrap;
+  align-content: space-around;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
 }
-#addUserButton{
-    height: 40px;
-    background-color: black;
-    color: white;
-    
 
+.Add_button {
+  height: 40px;
+  font-family: fangsong;
+  font-size: large;
+  font-weight: 300;
+  background-color: #0f0e0e;
+  color: aliceblue;
+  padding: 8px;
+}
+
+.TransparentButton {
+  background-color: white;
+  border: none;
 }
